hphp/hack/test/typecheck/records/record_instance_duplicate_field.php.exp
File "record_instance_duplicate_field.php", line 9, characters 38-40:
Duplicate record field `x` (NastCheck[3083])
File "record_instance_duplicate_field.php", line 9, characters 12-14:
Previous field is here
